--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
     <title>Cats of Jasnah. Teach your 4-year-old logic</title>
     <link href="cats-of-jasnah.css" rel="stylesheet" type="text/css" />
   </head>
