--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <h1 onclick="window.location.reload()">Cats of Jasnah</h1>
 
-    <div class="level-display">LEVEL: <span class="level-number"></span> | <span class=stars></span></div>
+    <div class="level-display"Уровень: <span class="level-number"></span> | <span class=stars></span></div>
 	<img class="trophy" src="trophy.png">
     <div class="number-bar">
       <div class="number-line">
@@ -29,7 +29,7 @@
         <button class="coj-btn" onclick="submit(9)" type="button">9</button>
       </div>
       <div class="desc">
-        To answer questions, tap the numbers above or just use your keyboard.
+        Чтобы ответить на вопросы, нажмите на цифры выше или просто используйте клавиатуру.
       </div>
     </div>
     <p class=clue onclick="speak(clue)"></p>
@@ -41,14 +41,14 @@
     >
 
     <div class="instructions">
-      <b>Instructions:</b><br /><br />
+      <b>Инструкция:</b><br /><br />
 
-      A logic game for young children.
+      Логическая игра для детей.
       <b
-        >Warning: the game will speak out loud (since young kids cannot read the
-        questions), so check your volume.</b
+        >Предупреждение: игра будет говорить вслух (так как маленькие дети не могут прочитать
+        вопросы), поэтому проверьте свою громкость.</b
       >
-      Choose a level to start.<br /><br />
+      Выберите уровень для начала игры.<br /><br />
       <div class='topics'>
 	  </div>
     </div>
